--- a/kind/README.adoc
+++ b/kind/README.adoc
@@ -11,47 +11,56 @@ This module can be declared by adding the following block on your Terraform conf
 module "thanos" {
   source = "git::https://github.com/camptocamp/devops-stack-module-thanos//kind?ref=<RELEASE>"
 
-  cluster_name     = module.kind.cluster_name
-  argocd_namespace = local.argocd_namespace
-  base_domain      = module.kind.base_domain
+  cluster_name     = local.cluster_name
+  base_domain      = local.base_domain
   cluster_issuer   = local.cluster_issuer
+  argocd_namespace = module.argocd_bootstrap.argocd_namespace
 
   metrics_storage = {
-    bucket_name       = "thanos" # Name given to the bucket
-    endpoint          = module.minio.endpoint
-    access_key        = "readwrite_user" # Name given to the read-write user created by the module MinIO.
-    secret_access_key = module.minio.readwrite_secret_key
+    bucket_name = local.minio_config.buckets.1.name
+    endpoint    = module.minio.endpoint
+    access_key  = local.minio_config.users.1.accessKey
+    secret_key  = local.minio_config.users.1.secretKey
   }
 
   thanos = {
     oidc = module.oidc.oidc
   }
 
-  depends_on = [module.oidc]
+  dependency_ids = {
+    argocd       = module.argocd_bootstrap.id
+    traefik      = module.traefik.id
+    cert-manager = module.cert-manager.id
+    minio        = module.minio.id
+    keycloak     = module.keycloak.id
+    oidc         = module.oidc.id
+  }
 }
 ----
 
-As you can see, a minimum requirement for this module is an S3 bucket that uses a user with read/write permissions, both created in the MinIO module we provide (more information below).
+IMPORTANT: You are in charge of creating an S3 bucket for Thanos to store the archived metrics. We've decided to keep the creation of this bucket outside of this module, mainly because the persistence of the data should not be related to the instantiation of the module itself.
 
-NOTE: There are multiple other options that can be set, as in the other modules, but we will not go into detail as this variant is mainly for test and development purposes. You can check the documentation on the other modules to get an idea.
+TIP: Check the xref:ROOT:ROOT:tutorials/deploy_kind.adoc[KinD deployment example] to see how to create the S3 bucket using MinIO and to better understand the values passed on the example above.
+
+NOTE: Do not forget that the bucket configuration also needs to be passed to the module `kube-prometheus-stack`.
 
 If there is a need to configure something besides the common settings that we have provided, you can customize the chart's `values.yaml` by adding an Helm configuration as an HCL structure:
 
 [source,terraform]
 ----
 module "thanos" {
-  source = "git::https://github.com/camptocamp/devops-stack-module-thanos.git//eks"
+  source = "git::https://github.com/camptocamp/devops-stack-module-thanos//kind?ref=<RELEASE>"
 
-  cluster_name            = var.cluster_name
-  argocd_namespace        = module.cluster.argocd_namespace
-  base_domain             = module.cluster.base_domain
-  cluster_issuer          = var.cluster_issuer
+  cluster_name     = local.cluster_name
+  base_domain      = local.base_domain
+  cluster_issuer   = local.cluster_issuer
+  argocd_namespace = module.argocd_bootstrap.argocd_namespace
 
   metrics_storage = {
-    bucket_name       = "thanos" # Name given to the bucket
-    endpoint          = module.minio.endpoint
-    access_key        = "readwrite_user" # Name given to the read-write user created by the module MinIO.
-    secret_access_key = module.minio.readwrite_secret_key
+    bucket_name = local.minio_config.buckets.1.name
+    endpoint    = module.minio.endpoint
+    access_key  = local.minio_config.users.1.accessKey
+    secret_key  = local.minio_config.users.1.secretKey
   }
 
   thanos = {
@@ -81,37 +90,16 @@ module "thanos" {
     }
   }]
 
-  depends_on = [module.argocd_bootstrap]
+  dependency_ids = {
+    argocd       = module.argocd_bootstrap.id
+    traefik      = module.traefik.id
+    cert-manager = module.cert-manager.id
+    minio        = module.minio.id
+    keycloak     = module.keycloak.id
+    oidc         = module.oidc.id
+  }
 }
 ----
-
-=== S3 Bucket
-
-IMPORTANT: You are in charge of creating an S3 bucket for Thanos to store the archived metrics.
-
-We've decided to keep the creation of this bucket outside of this module, mainly because the persistence of the data should not be related to the instantiation of the module itself.
-
-You can create an S3 bucket using the https://github.com/camptocamp/devops-stack-module-minio[MinIO] module by simply adding the bucket name to that module's declaration.
-
-[source,terraform]
-----
-module "minio" {
-  source = "git::https://github.com/camptocamp/devops-stack-module-minio?ref=<RELEASE>"
-
-  cluster_name     = module.kind.cluster_name
-  base_domain      = module.kind.base_domain
-  argocd_namespace = local.argocd_namespace
-
-  minio_buckets = [
-    "thanos", # <--
-    "loki",
-  ]
-
-  depends_on = [module.ingress, module.cert-manager]
-}
-----
-
-NOTE: Do not forget that the bucket configuration also needs to be passed to the module `kube-prometheus-stack`.
 
 === OIDC
 
@@ -125,7 +113,6 @@ You can pass these values by pointing an output from another module (as above), 
 ----
 module "thanos" {
   ...
-
   thanos = {
     oidc = {
       issuer_url    = "<URL>"
@@ -133,7 +120,6 @@ module "thanos" {
       client_secret = "<SECRET>"
     }
   }
-
   ...
 }
 ----
@@ -146,13 +132,21 @@ Since the resource requirements are not the same on every deployment and because
 
 === Dependencies
 
-==== `module.oidc`
+==== `module.argocd_bootstrap.id`
 
-This module needs an OIDC provider to function and consequently it must be one deployed after the module `oidc`.
+Obviously, the module depends on an already running Argo CD in the cluster in order for the application to be created.
 
-==== `module.minio`
+==== `module.traefik.id` and `module.cert-manager.id`
 
-This module needs to have the configuration for the S3 bucket and consequently it must be one deployed after the module `minio`.
+This module has multiple ingresses and consequently it must be deployed after the module `traefik` and `cert-manager`.
+
+==== `module.keycloak.id` and `module.oidc.id`
+
+When using Keycloak as an OIDC provider for the Longhorn Dashboard, you need to add Keycloak and the OIDC module as dependencies.
+
+==== `module.minio.id`
+
+This module requires a S3 bucket to store the metrics so it needs to be deployed after the module MinIO.
 
 // BEGIN_TF_DOCS
 === Requirements
