--- a/eks/README.adoc
+++ b/eks/README.adoc
@@ -11,26 +11,36 @@ This module can be declared by adding the following block on your Terraform conf
 module "thanos" {
   source = "git::https://github.com/camptocamp/devops-stack-module-thanos.git//eks?ref=<RELEASE>"
 
-  cluster_name            = var.cluster_name
-  argocd_namespace        = module.cluster.argocd_namespace
-  base_domain             = module.cluster.base_domain
-  cluster_issuer          = var.cluster_issuer
+  cluster_name     = module.eks.cluster_name
+  base_domain      = module.eks.base_domain
+  cluster_issuer   = local.cluster_issuer
+  argocd_namespace = module.argocd_bootstrap.argocd_namespace
 
   metrics_storage = {
     bucket_id    = aws_s3_bucket.thanos_metrics_storage.id
     region       = aws_s3_bucket.thanos_metrics_storage.region
     iam_role_arn = module.iam_assumable_role_thanos.iam_role_arn
   }
-
   thanos = {
     oidc = module.oidc.oidc
   }
 
-  depends_on = [module.argocd_bootstrap]
-}
+  dependency_ids = {
+    argocd       = module.argocd_bootstrap.id
+    traefik      = module.traefik.id
+    cert-manager = module.cert-manager.id
+    oidc         = module.oidc.id
+  }
+}  
 ----
 
 As you can see, a minimum requirement for this module is an S3 bucket with an IAM policy attached and an OIDC provider (more information below).
+
+IMPORTANT: You are in charge of creating a S3 bucket for Thanos to store the archived metrics. We've decided to keep the creation of this bucket outside of this module, mainly because the persistence of the data should not be related to the instantiation of the module itself.
+
+TIP: Check the xref:ROOT:ROOT:tutorials/deploy_eks.adoc[EKS deployment example] to see how to create the S3 bucket and to better understand the values passed on the example above.
+
+NOTE: Do not forget that the bucket configuration also needs to be passed to the module `kube-prometheus-stack`.
 
 Although the declaration above allows you to have a barebones Thanos deployed, it is highly recommended that you customize a few settings for a production-ready deployment. You need to at least configure the resource requirements for a few of the Thanos' components and the size of the persistent volume used by the compactor. You can also configure the compactor retention times, as in the example below.
 
@@ -39,10 +49,10 @@ Although the declaration above allows you to have a barebones Thanos deployed, i
 module "thanos" {
   source = "git::https://github.com/camptocamp/devops-stack-module-thanos.git//eks?ref=<RELEASE>"
 
-  cluster_name            = var.cluster_name
-  argocd_namespace        = module.cluster.argocd_namespace
-  base_domain             = module.cluster.base_domain
-  cluster_issuer          = var.cluster_issuer
+  cluster_name     = module.eks.cluster_name
+  base_domain      = module.eks.base_domain
+  cluster_issuer   = local.cluster_issuer
+  argocd_namespace = module.argocd_bootstrap.argocd_namespace
 
   metrics_storage = {
     bucket_id    = aws_s3_bucket.thanos_metrics_storage.id
@@ -94,7 +104,12 @@ module "thanos" {
     }
   }
 
-  depends_on = [module.argocd_bootstrap]
+  dependency_ids = {
+    argocd       = module.argocd_bootstrap.id
+    traefik      = module.traefik.id
+    cert-manager = module.cert-manager.id
+    oidc         = module.oidc.id
+  }
 }
 ----
 
@@ -107,10 +122,10 @@ If there is a need to configure something besides the common settings that we ha
 module "thanos" {
   source = "git::https://github.com/camptocamp/devops-stack-module-thanos.git//eks?ref=<RELEASE>"
 
-  cluster_name            = var.cluster_name
-  argocd_namespace        = module.cluster.argocd_namespace
-  base_domain             = module.cluster.base_domain
-  cluster_issuer          = var.cluster_issuer
+  cluster_name     = module.eks.cluster_name
+  base_domain      = module.eks.base_domain
+  cluster_issuer   = local.cluster_issuer
+  argocd_namespace = module.argocd_bootstrap.argocd_namespace
 
   metrics_storage = {
     bucket_id    = aws_s3_bucket.thanos_metrics_storage.id
@@ -145,76 +160,14 @@ module "thanos" {
     }
   }]
 
-  depends_on = [module.argocd_bootstrap]
-}
-----
-
-=== S3 Bucket
-
-IMPORTANT: You are in charge of creating an S3 bucket for Thanos to store the archived metrics.
-
-We've decided to keep the creation of this bucket outside of this module, mainly because the persistence of the data should not be related to the instantiation of the module itself.
-
-You can create an S3 bucket and an IAM policy using the code below:
-
-[source,terraform]
-----
-resource "aws_s3_bucket" "thanos_metrics_storage" {
-  bucket = format("thanos-metrics-storage-%s", module.eks.cluster_name)
-
-  force_destroy = true
-
-  tags = {
-    Name    = "Thanos metrics storage"
-    Cluster = module.eks.cluster_name
-  }
-}
-
-module "iam_assumable_role_thanos" {
-  source                     = "terraform-aws-modules/iam/aws//modules/iam-assumable-role-with-oidc"
-  version                    = "4.0.0"
-  create_role                = true
-  number_of_role_policy_arns = 1
-  role_name                  = format("thanos-s3-role-%s", module.eks.cluster_name)
-  provider_url               = replace(module.eks.cluster_oidc_issuer_url, "https://", "")
-  role_policy_arns           = [aws_iam_policy.thanos_s3_policy.arn]
-
-  # List of ServiceAccounts that have permission to attach to this IAM role
-  oidc_fully_qualified_subjects = [
-    "system:serviceaccount:thanos:thanos-bucketweb",
-    "system:serviceaccount:thanos:thanos-storegateway",
-    "system:serviceaccount:thanos:thanos-compactor",
-    "system:serviceaccount:thanos:thanos-sidecar",
-    "system:serviceaccount:kube-prometheus-stack:kube-prometheus-stack-prometheus"
-  ]
-}
-
-resource "aws_iam_policy" "thanos_s3_policy" {
-  name_prefix = "thanos-s3-"
-  description = "Thanos IAM policy for cluster ${module.eks.cluster_name}"
-  policy      = data.aws_iam_policy_document.thanos_s3_policy.json
-}
-
-data "aws_iam_policy_document" "thanos_s3_policy" {
-  statement {
-    actions = [
-      "s3:ListBucket",
-      "s3:PutObject",
-      "s3:GetObject",
-      "s3:DeleteObject",
-    ]
-
-    resources = [
-      aws_s3_bucket.thanos_metrics_storage.arn,
-      format("%s/*", aws_s3_bucket.thanos_metrics_storage.arn),
-    ]
-
-    effect = "Allow"
+  dependency_ids = {
+    argocd       = module.argocd_bootstrap.id
+    traefik      = module.traefik.id
+    cert-manager = module.cert-manager.id
+    oidc         = module.oidc.id
   }
 }
 ----
-
-NOTE: Do not forget that the bucket configuration also needs to be passed to the module `kube-prometheus-stack`.
 
 === OIDC
 
@@ -228,7 +181,6 @@ You can pass these values by pointing an output from another module (as above), 
 ----
 module "thanos" {
   ...
-
   thanos = {
     oidc = {
       issuer_url    = "<URL>"
@@ -236,7 +188,6 @@ module "thanos" {
       client_secret = "<SECRET>"
     }
   }
-
   ...
 }
 ----
@@ -245,7 +196,7 @@ module "thanos" {
 
 Since the resource requirements are not the same on every deployment and because the consumed resources also influence the cost associated, we refrained from configuring default resource requirements for the components of Thanos. We did, however, set memory limits for some of the pods (`query`, `storegateway` and `compactor` all have a 1 GB memory limit). We recommend that you customize these values as you see fit.
 
-IMPORTANT: At the very least you should configure the size for the _PersistentVolume_ used by the compactor.
+IMPORTANT: At the very least you should configure the size for the Persistent Volume used by the compactor.
 
 This value MUST be configured otherwise the compactor will NOT work on a production deployment. The Thanos documentation https://thanos.io/tip/thanos/quick-tutorial.md/#compactor|[recommends] a size of 100-300 GB.
 
@@ -253,9 +204,17 @@ This value MUST be configured otherwise the compactor will NOT work on a product
 
 === Dependencies
 
-==== `module.argocd_bootstrap`
+==== `module.argocd_bootstrap.id`
 
-This module must be one of the first ones to be deployed and consequently it needs to be deployed after the module `argocd_bootstrap`.
+Obviously, the module depends on an already running Argo CD in the cluster in order for the application to be created.
+
+==== `module.traefik.id` and `module.cert-manager.id`
+
+This module has multiple ingresses and consequently it must be deployed after the module `traefik` and `cert-manager`.
+
+==== `module.oidc.id`
+
+You need to add the OIDC module as a dependency, since OAuth2-Proxy is deployed to restrict access to the web interfaces of the components.
 
 // BEGIN_TF_DOCS
 === Requirements
