--- a/aks/README.adoc
+++ b/aks/README.adoc
@@ -474,6 +474,14 @@ Type: `bool`
 
 Default: `false`
 
+==== [[input_network_policy_thanos]] <<input_network_policy_thanos,network_policy_thanos>>
+
+Description: Enable or disable network policy for Thanos components.
+
+Type: `bool`
+
+Default: `false`
+
 === Outputs
 
 The following outputs are exported:
@@ -736,6 +744,12 @@ object({
 
 |[[input_enable_service_monitor]] <<input_enable_service_monitor,enable_service_monitor>>
 |Boolean to enable the deployment of a service monitor for Prometheus. This also enables the deployment of default Prometheus rules and Grafana dashboards, which are embedded inside the chart templates and are taken from the official Thanos examples, available https://github.com/thanos-io/thanos/blob/main/examples/alerts/alerts.yaml[here].
+|`bool`
+|`false`
+|no
+
+|[[input_network_policy_thanos]] <<input_network_policy_thanos,network_policy_thanos>>
+|Enable or disable network policy for Thanos components.
 |`bool`
 |`false`
 |no
